--- a/css/index.css
+++ b/css/index.css
@@ -16,8 +16,18 @@ body {
     transition: transform 1s linear;
 }
 
-.container.show-nav {
-    transform: rotate(-20deg);
+.btn {
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    text-decoration: none;
+    border: 0;
+    border-radius: 6px;
+    cursor: pointer;
+    font-family: inherit;
+    padding: 8px 30px;
+    margin: 5px;
+    color: white;
 }
 
 .circle-container {
