--- a/css/index.css
+++ b/css/index.css
@@ -30,6 +30,14 @@ body {
     color: white;
 }
 
+.btn:hover {
+    
+}
+
+.btn:active {
+    transform: scale(0.98);
+}
+
 .circle-container {
     position: fixed;
     top: -100px;
