--- a/css/index.css
+++ b/css/index.css
@@ -2,8 +2,7 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
-    background-color: #333333;
-    color: #222222;
+    background-color: white;
     overflow-x: hidden;
 }
 
@@ -21,7 +20,6 @@ body {
     align-items: center;
     margin: 0;
     text-decoration: none;
-    border: 0;
     border-radius: 6px;
     cursor: pointer;
     font-family: inherit;
@@ -36,12 +34,6 @@ body {
 
 .btn:active {
     transform: scale(0.98);
-}
-
-.circle-container {
-    position: fixed;
-    top: -100px;
-    left: -100px;
 }
 
 .content img {
@@ -68,48 +60,6 @@ body {
 
 }
 
-nav {
-    position: fixed;
-    bottom: 40px;
-    left: 0;
+a {
+    color: black;
 }
-
-nav ul {
-    list-style-type: none;
-    padding-left: 30px;
-}
-
-nav ul li {
-    color: #ffffff;
-    margin: 40px 0;
-    text-transform: uppercase;
-    transform: translateX(-100%);
-    transition: transform 1s ease-in;
-}
-
-nav ul li i {
-    font-size: 20px;
-    margin-right: 10px;
-
-}
-
-nav ul li + li {
-    margin-left: 15px;
-    transform: translateX(-150%);
-}
-
-nav ul li + li + li {
-    margin-left: 30px;
-    transform: translateX(-200%);
-}
-
-.container.show-nav + nav li {
-    transform: translateX(0);
-    transition-delay: .5s;
-}
-
-nav a {
-    color: #fafafa;
-    text-decoration: none;
-}
-
