--- a/css/index.css
+++ b/css/index.css
@@ -25,7 +25,7 @@ body {
     font-family: inherit;
     padding: 8px 30px;
     margin: 5px;
-    color: white;
+    color: black;
 }
 
 .btn:hover {
